fixing netlify bugs

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
 		<meta property="og:title" content="{title}" />
 		<meta property="og:description" content="Discover revolutionary healing devices powered by bioresonance technology." />
 		<meta property="og:image" content="../assets/logo.png" />
-		<meta property="og:url" content="https://anywherehealing.com" />
+		<meta property="og:url" content="https://freqana.com" />
 
 	</head>
 	<body>
