updated the landing page

--- a/src/components/Brief.astro
+++ b/src/components/Brief.astro
@@ -8,6 +8,7 @@ import Bolt from '../assets/bolt.svg'
 import Money from '../assets/money.svg'
 import Wallet from '../assets/wallet.svg'
 import Secure from '../assets/lock.svg'
+import AlphaAlt from '../assets/alpha-alt3.jpg'
 
 ---
 
@@ -101,7 +102,7 @@ import Secure from '../assets/lock.svg'
             </div>
 
             <div class="brief-media center one-half column">
-                <img src={VectorOne.src} class="md-width">
+                <img src={AlphaAlt.src} class="md-width">
             </div>
         </div>
 
