--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Customers from '../components/Customers.astro'
 import FAQ from '../components/FAQ.astro';
 import Footer from '../components/Footer.astro';
 import FullVideo from '../components/FullVideo.astro';
+import BackedByScience from '../components/BackedByScience.astro';
 ---
 
 <Layout title="Anywhere Healing">
@@ -16,6 +17,7 @@ import FullVideo from '../components/FullVideo.astro';
 	<Hero />
 	<FullVideo />
 	<Brief />
+	<BackedByScience />
 	<Features />
 	<Pricing />
 	<Customers />
