reorganized landing page

--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -8,7 +8,7 @@ import CharismaRing from '../assets/charismaring.png'
     <div class="container">
         <div class="center text-container">
             <h3 class="h1-title">Choose the right one</h3>
-            <p>Our main product is Alpha Wearable but we also offer Frequana and Charisma ring. Choose the one is for you or buy all of them for frequency power increase, helping you to improve faster.</p>
+            <p>Choose the one is for you or buy all of them for frequency power increase, helping you to improve faster.</p>
         <div class="buttonbuyall"><a href="/order?product=bundle" class="button button-primary u-full-width">Buy The Complete Bundle</a></div>
         
           </div>
