--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ import heroBg from '../assets/hero-bg.jpg';
                       That's because your cells vibrate at natural frequencies, and when something's wrong, those frequencies become disrupted.
                     </p>
                     <div class="product-cta">
-                      <a href="/product" class="button button-primary u-full-width">Get Back to Your Best!</a>
+                      <a href="/product" class="button button-primary u-full-width">Shop Alpha Wearable</a>
                     </div>
                 </div>
             </div>
